# BAK-Arbeit

./: .~lock.GMSH element types.ods#  GMSH element types.ods  README.md  data.mat  main.m  main_simple_capacitor.m  plate_capacitor_second_order_analytic_calculation.m
doc/: third_order_triangle_shape_functions.aux  third_order_triangle_shape_functions.blg  third_order_triangle_shape_functions.toc
doc/bericht/: Protokoll.aux  Protokoll.bbl  Protokoll.blg  Protokoll.tcp  Protokoll.tex  Protokoll.toc  Protokoll.tps  TUG.eps  Thumbs.db  abstract.tex  analytical.tex  antennen.tex  assembling.tex  aufgabenstellung.tex  calculation_of_element_matrices.tex  command.tex  element_equation_systems_theory.tex  examples.tex  fem.tex  implementation_main.tex  implementierung_geometrie.tex  literatur.bib  mesh_parsing.tex  nomenclature.tex  problems.tex  (+3 more)
entities/: DataHash.m  ElectrostaticProblem.m  FirstOrderTriangleElement.m  GaussianQuadrature.m  GmshAPI.m  GmshIF.m  Misc.m  Parser.m  PlaneMagnetostaticProblem.m  Postprocessor.m  RotationSymmetricMagnetostaticProblem.m  SecondOrderTriangleElement.m  Setup.m  Solver.m  StaticCurrentProblem.m  ThirdOrderTriangleElement.m  coding_standard.m  main_window.mlapp  save_figures.m  solver.m
gmsh_c/: CMakeLists.txt  main.c
libfemlabgmsh/: CMakeLists.txt  libfemlab.c  libfemlab.h  main.c
scripts/: check_third_order_triangle_calculations.m  cubic_triangle_shape_functions.m  gmsh_commandline_test.sh  quadratic_triangle_shape_functions.m  third_order_triangle_shape_functions.mat  third_order_triangle_shape_functions_latex_expressions.mat
(+78 files in other folders)
